--- a/lesson02/styles/large.css
+++ b/lesson02/styles/large.css
@@ -4,7 +4,7 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 
-    .card3 {
+    .sectionThree {
         grid-row: 1;
         grid-column: 3/4;
     }
